--- a/index.html
+++ b/index.html
@@ -1,75 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profit & Loss - calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        *{
-            margin: 0; 
-            padding: 0;
-        }
-        body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        input , select , button{
-            padding: 7px 13px;
-            font-size: 18px;
-            border-radius: 15px;
-            border: 2px solid gray;
-            outline: none;
-            transition: all 0.3s linear;
-        }
-        input:focus  , select:focus , button:focus{
-            border: 2px solid black;
-        }
-        button{
-            cursor: pointer;
-        }
-        .input-containor{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 5px;
-            padding: 23px;
-            border-radius: 5px;
-            background-color: rgba(133, 133, 207, 0.877);
-        }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+        gap: 15px;
+      }
+      input,
+      select,
+      button {
+        padding: 7px 13px;
+        font-size: 18px;
+        border-radius: 15px;
+        border: 2px solid gray;
+        outline: none;
+        transition: all 0.3s linear;
+      }
+      input:focus,
+      select:focus,
+      button:focus {
+        border: 2px solid black;
+      }
+      button {
+        cursor: pointer;
+      }
+      .input-containor {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding: 23px;
+        border-radius: 5px;
+        background-color: rgba(143, 142, 209, 0.719);
+        flex-direction: column;
+      }
+      .profit {
+        height: 100px;
+        width: 80vh;
+        background-color: rgba(120, 228, 120, 0.719);
+        border-radius: 5px;
+      }
+      .loss {
+        height: 100px;
+        width: 80vh;
+        background-color: rgba(228, 120, 120, 0.719);
+        border-radius: 5px;
+      }
+      .result {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 7px;
+      }
+      .input{
+        margin: 10px;
+      }
     </style>
-      
-</head>
-<body>
+  </head>
+  <body>
     <div class="input-containor">
-        <input type="text" placeholder="Add Item">
-        <input type="number" placeholder="Price">
-        <select name="" id="">
-            <option value="buy">BUY</option>
-            <option value="sell">SELL</option>
-        </select>
-        <button>Proceed</button>
+      <div class="input">
+        <input type="text" placeholder="Add Item" />
+      <input type="number" placeholder="Price" />
+      <select name="" id="">
+        <option value="buy">BUY</option>
+        <option value="sell">SELL</option>
+      </select>
+      <button>Proceed</button>
+      </div>
+      <div class="result">
+        <div class="profit"></div>
+        <div class="loss"></div>
+      </div>
     </div>
 
-    <div class="result">
-        <div class="profit">
-        </div>
-        <div class="loss">
-
-        </div>
-    </div>
-    
-
-
-
-
-
-
-    <script>
-
-
-    </script>
-</body>
+    <script></script>
+  </body>
 </html>
