--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profit & Loss - calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyOqzSOD1EN0yAnwMzI8opjF0CdQJ3RPfatg&s">
   </head>
   <body>
     <h3>Profit and Loss calculator</h3>
